@@ -1,4 +1,5 @@
 0.7.0 - currently working on
+- [#3492] Feature: Add a price view helper
 - [#3487] Feature: Add MapperRegistry::set
 - [#3490] Feature: Add model and mapper for static_currencies
 - [#3491] Change: Allow prices with 3 decimal digits
